tests/paczka1/small_fuzzy/98444122.err
Error in line 3: aIYuEw S528 60,8
Error in line 5: aIYuEw S848 4,5
Error in line 2: pEyas92u S515 44,2
Error in line 14: IN8qms0kqBa S690 -1,7
